--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "doujinshop-meta-search-service": "git+https://github.com/ishiduca/doujinshop-meta-search-service.git"
   },
   "devDependencies": {
+    "minimist": "^1.2.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0"
+  },
+  "bin": {
+    "meta-toranoana": "./bin/metasearch.js"
   }
 }
